--- a/01_intro_to_r/intro_to_r.Rmd
+++ b/01_intro_to_r/intro_to_r.Rmd
@@ -15,6 +15,13 @@ library(tidyverse)
 library(openintro)
 ```
 
+## Logistics
+
+This lab will occur remotely and in pairs (there may be one team of three people). For those of you participating synchronously, you will find the Zoom room information on [Moodle](https://moodle.smith.edu/). I will assign you to random breakout rooms. I will be available in the main Zoom room to answer questions. If you have a question or technical problem, click the "Ask for Help" button (it looks like a question mark) in the meeting controls, and I will be alerted to join your breakout room.  
+
+For those of you participating asynchronously, alert me to technical challengs over Slack DM, and I will get back to you as soon as possible. For questions about the content of the lab, please sign up for an office hour time block. 
+
+Each of you should be writing and running code, examining output, and answering the exercises throughout the lab. However, you only need to turn in one final lab report. To do so, one of you can be the main recorder of answers in the lab document. It may be helpful to share your screen. You will be working with this same partner/group for the next lab, so you will switch roles next week. 
 
 ## The RStudio Interface
 
@@ -25,12 +32,15 @@ As the labs progress, you are encouraged to explore beyond what the labs dictate
 Before we get to that stage, however, you need to build some basic fluency in R. 
 Today we begin with the fundamental building blocks of R and RStudio: the interface, reading in data, and basic commands.
 
-Go ahead and launch RStudio. 
+Go ahead and launch Smith's RStudio Server [here](https://rstudio.smith.edu/). Your username and password are the same as your Smith e-mail. You do *not* need to have any particular software installed on your computer to access the server.
+
 You should see a window that looks like the image shown below.
 
-```{r r-interface-2020, echo=FALSE, results="asis"}
-knitr::include_graphics("img/r-interface-2020.png")
+```{r r-server-interface-2020, echo=FALSE, results="asis"}
+knitr::include_graphics("img/r-interface-2020.png") ## note change when I can get a screenshot
 ```
+
+If you cannot access the server, call me into your breakout room.
 
 The panel on the lower left is where the action happens. It's called the *console*. 
 Everytime you launch RStudio, it will have the same text at the top of the console telling you the version of R that you're running. 
@@ -112,6 +122,8 @@ Sometimes you load them as we have done here, and sometimes you create them your
 
 The Arbuthnot data set refers to the work of Dr. John Arbuthnot, an 18<sup>th</sup> century physician, writer, and mathematician. 
 He was interested in the ratio of newborn boys to newborn girls, so he gathered the baptism records for children born in London for every year from 1629 to 1710. Once again, we can view the data by typing its name into the console.
+
+Note: In this historical dataset, babies are classified by sex into "boys" and "girls," but I acknowledge that both sex and gender do not exist in a binary form.
 
 ```{r view-data}
 arbuthnot
@@ -380,6 +392,37 @@ These cheatsheets may come in handy throughout the semester:
 Note that some of the code on these cheatsheets may be too advanced for this course.
 However the majority of it will become useful throughout the semester.
 
+## Dowloading R and RStudio on your own computer
+
+The RStudio Server requries an internet connection and is constrained by how many Smithies are using it at any given time. It can be helpful to have a version of R and RStudio that are local to your device.
+
+1. Download R [here](https://cran.r-project.org/mirrors.html). Choose the CRAN mirror site that is closest to you. In the box labeled "Download and Install R," click the link corresponding to your operating system.
+
+1. Download RStudio by clicking on the "Download" button under the free version of RStudio Desktop [here](https://rstudio.com/products/rstudio/download/). Check that the recommended version matches your operating system and click the "Download RStudio for..." button.
+
+1. Check that it worked by launching RStudio. You should see a window that looks like the image shown below.
+
+```{r r-interface-2020, echo=FALSE, results="asis"}
+knitr::include_graphics("img/r-interface-2020.png")
+```
+
+Call me into your breakout room if you are having trouble with this process. Note at the end of your lab report whether or not you both were able to successfully download R and RStudio locally.
+
+
+Note: These download instructions are adapted from [this blog post](https://towardsdatascience.com/how-to-install-r-and-rstudio-584eeefb1a41).
+
+## Deliverables
+
+When you are finished editing your Markdown document click the "Knit" button and choose "Knit to HTML" in the top left corner of RStudio. This will run all of your code and create a formatted document of the output. If you get an error, it means something in your Markdown file isn't right, either an error in code or some error in formatting. Call me into your breakout room, and we will troubleshoot.
+
+Submit your Markdown document and knitted file to [Moodle](https://moodle.smith.edu/) as:
+
+LastName-LastName-L-01.Rmd  (add a third last name if applicable)
+
+LastName-LastName-L-01.html
+
+*Due*: Friday, September 4th (6 pm Eastern time)
+
 * * *
 
-<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a> and was adapted by Sara Stoudt.
