--- a/01_intro_to_r/intro_to_r.Rmd
+++ b/01_intro_to_r/intro_to_r.Rmd
@@ -224,6 +224,11 @@ Try the following in your console:
 
 Notice that the help file replaces the plot in the lower right panel. You can toggle between plots and help files using the tabs at the top of that panel. 
 
+```{r horst-ggplot, echo=FALSE, results="asis", out.width = "50%"}
+knitr::include_graphics("img/ggplot2_masterpiece.png") 
+```
+[Artwork](https://github.com/allisonhorst/stats-illustrations/) by @allison_horst
+
 1. Is there an apparent trend in the number of girls baptized over the years? 
    How would you describe it? (To ensure that your lab report is comprehensive,
    be sure to include the code needed to make the plot as well as your written
@@ -266,18 +271,27 @@ To continue our analogy with mathematical functions, `x %>% f(y)` is equivalent 
 
 *"Take the `arbuthnot` dataset and **pipe** it into the `mutate` function. 
 Mutate the `arbuthnot` data set by creating a new variable called `total` that is the sum of the variables called `boys` and `girls`. 
+
 Then assign the resulting dataset to the object called `arbuthnot`, i.e. overwrite the old `arbuthnot` dataset with the new one containing the new variable."*
 
 This is equivalent to going through each row and adding up the `boys` and `girls` counts for that year and recording that value in a new column called `total`.
 </div>
 
+
+
 <div id="boxedtext">
 **Where is the new variable? ** When you make changes to variables in your dataset, click on the name of the dataset again to update it in the data viewer.
 </div>
 
-You'll see that there is now a new column called `total` that has been tacked onto the data frame. 
+You'll see that there is now a new column called `total` that has been tacked onto the data frame.
+
+```{r horst-mutate, echo=FALSE, results="asis", out.width = "50%"}
+knitr::include_graphics("img/dplyr_mutate.png") 
+```
+[Artwork](https://github.com/allisonhorst/stats-illustrations/) by @allison_horst
+
 The special symbol `<-` performs an *assignment*, taking the output of one line of code and saving it into an object in your environment. 
-In this case, you already have an object called `arbuthnot`, so this command updatesthat data set with the new mutated column.
+In this case, you already have an object called `arbuthnot`, so this command updates that data set with the new mutated column.
 
 You can make a line plot of the total number of baptisms per year with the command
 
