--- a/02_intro_to_data/intro_to_data.Rmd
+++ b/02_intro_to_data/intro_to_data.Rmd
@@ -182,6 +182,11 @@ ggplot(data = lax_flights, aes(x = dep_delay)) +
   geom_histogram()
 ```
 
+
+![](img/dplyr_filter.jpg)
+
+[Artwork](https://github.com/allisonhorst/stats-illustrations/) by @allison_horst
+
 Let's decipher these two commands (OK, so it might look like four lines, but
 the first two physical lines of code are actually part of the same command. It's 
 common to add a break to a new line after `%>%` to help readability).
@@ -388,6 +393,8 @@ dl_aa_ua <- nycflights %>%
 ggplot(data = dl_aa_ua, aes(x = dep_delay, y = arr_delay, color = carrier)) +
   geom_point()
 ```
+
+You may want to refer to the [ggplot cheatsheet](https://rstudio.com/wp-content/uploads/2016/11/ggplot2-cheatsheet-2.1.pdf) and the [dplyr cheatsheet](https://rstudio.com/wp-content/uploads/2015/02/data-wrangling-cheatsheet.pdf).
 
 ## Deliverables
 
