--- a/04_confidence_intervals/confidence_intervals.Rmd
+++ b/04_confidence_intervals/confidence_intervals.Rmd
@@ -3,9 +3,9 @@ title: 'Foundations for statistical inference - Confidence intervals'
 runtime: shiny
 output:
   html_document:
-    css: ../lab.css
-    highlight: pygments
     theme: cerulean
+    highlight: pygments
+    css: ../lab.css
     toc: true
     toc_float: true
 ---
@@ -14,19 +14,30 @@ output:
 knitr::opts_chunk$set(eval = TRUE, results = FALSE, fig.show = "hide", message = FALSE)
 ```
 
+## Logistics
+
+This lab will occur remotely and in pairs (there may be one group of three). For those of you participating synchronously, you will find the Zoom room information on [Moodle](https://moodle.smith.edu/). I will assign you to a breakout room with your partner(s). 
+
+For those participating syncronously I will be available in the main Zoom room to answer questions. If you have a question or technical problem, click the "Ask for Help" button (it looks like a question mark) in the meeting controls, and I will be alerted to join your breakout room.  
+
+For those of you participating asynchronously, alert me to technical challengs over Slack DM, and I will get back to you as soon as possible. For questions about the content of the lab, please sign up for an office hour time block. 
+
+Each of you should be writing and running code, examining output, and answering the exercises throughout the lab. However, you only need to turn in one final lab report. To do so, whoever was *not* the main recorder last week should be the main recorder of answers in the lab document this week. It may be helpful to share your screen. 
+
+You all should also feel free to ask and answer questions amongst yourselves via Zoom if participating synchronously or via Slack if participating asynchronously. Please note at the end of the lab document who you consulted for help.
+
+
+
+
+## Getting Started
+
+
 If you have access to data on an entire population, say the opinion of every adult in the United States on whether or not they think climate change is affecting their local community, it's straightforward to answer questions like, "What percent of US adults think climate change is affecting their local community?". 
 Similarly, if you had demographic information on the population you could examine how, if at all, this opinion varies among young and old adults and adults with different leanings.
 If you have access to only a sample of the population, as is often the case, the task becomes more complicated. 
 What is your best guess for this proportion if you only have data from a small sample of adults?
 This type of situation requires that you use your sample to make inference on what your population looks like.
 
-<div id="boxedtext">
-**Setting a seed:** You will take random samples and build sampling distributions
-in this lab, which means you should set a seed on top of your lab. If this concept
-is new to you, review the lab on probability.
-</div>
-
-## Getting Started
 
 ### Load packages
 
@@ -39,6 +50,15 @@ library(tidyverse)
 library(openintro)
 library(infer)
 ```
+
+### Random samples
+
+It doesn't really matter what you pick for the seed, but I usually use the numbers from the current date and time (but exclude any zeros). Kellie Ottoboni, who studied random number generators, told me a good heuristic is to avoid using zeros. 
+
+```{r set-seed, message = F}
+set.seed(818113)
+```
+
 
 ### Creating a reproducible lab report
 
@@ -99,8 +119,9 @@ samp <- us_adults %>%
     the proportion of those **in this sample** who think climate change affects their 
     local community.
 
-1.  Would you expect another student's sample proportion to be identical to yours? 
+2.  Would you expect another student's sample proportion to be identical to yours? 
     Would you expect it to be similar? Why or why not?
+
 
 ## Confidence intervals
 
@@ -109,10 +130,7 @@ With just one sample, the best estimate of the proportion of US adults who think
 That serves as a good **point estimate**, but it would be useful to also communicate how uncertain you are of that estimate. 
 This uncertainty can be quantified using a **confidence interval**.
 
-One way of calculating a confidence interval for a population proportion is based on the Central Limit Theorem, as $\hat{p} \pm z^\star SE_{\hat{p}}$ is, or more precisely, as
-\[ \hat{p} \pm z^\star \sqrt{ \frac{\hat{p} (1-\hat{p})}{n} } \]
-
-Another way is using simulation, or to be more specific, using **bootstrapping**. 
+One way of calculating a confidence interval for a population proportion is using simulation, or to be more specific, using **bootstrapping**. 
 The term **bootstrapping** comes from the phrase "pulling oneself up by one’s bootstraps", which is a metaphor for accomplishing an impossible task without any outside help.
 In this case the impossible task is estimating a population parameter (the unknown population proportion), and we’ll accomplish it using data from only the given sample.
 Note that this notion of saying something about a population parameter using only information from an observed sample is the crux of statistical inference, it is not limited to bootstrapping. 
@@ -124,7 +142,7 @@ The bootstrapping scheme is as follows:
 - **Step 1.** Take a bootstrap sample - a random sample taken **with replacement** from the original sample, of the same size as the original sample.
 - **Step 2.** Calculate the bootstrap statistic - a statistic such as mean, median, proportion, slope, etc. computed on the bootstrap samples.
 - **Step 3.** Repeat steps (1) and (2) many times to create a bootstrap distribution - a distribution of bootstrap statistics.
-- **Step 4.** Calculate the bounds of the XX% confidence interval as the middle XX% j knof the bootstrap distribution.
+- **Step 4.** Calculate the bounds of the XX% confidence interval as the middle XX% of the bootstrap distribution.
 
 Instead of coding up each of these steps, we will construct confidence intervals using the **infer** package.
 
@@ -158,15 +176,15 @@ To recap: even though we don't know what the full population looks like, we're 9
 
 ## Confidence levels
 
-1.  In the interpretation above, we used the phrase "95% confident". What does "95% confidence" mean?
+3.  In the interpretation above, we used the phrase "95% confident". What does "95% confidence" mean?
 
 In this case, you have the rare luxury of knowing the true population proportion (62%) since you have data on the entire population. 
 
-1.  Does your confidence interval capture the true population proportion of US adults 
+4.  Does your confidence interval capture the true population proportion of US adults 
     who think climate change affects their local community? If you are working on this 
     lab in a classroom, does your neighbor's interval capture this value? 
 
-1.  Each student should have gotten a slightly different confidence interval. What 
+5.  Each student should have gotten a slightly different confidence interval. What 
     proportion of those intervals would you expect to capture the true population 
     mean? Why?
 
@@ -288,46 +306,55 @@ shinyApp(
 )
 ```
 
-
-1.  Given a sample size of 60, 1000 bootstrap samples for each interval, and 50 
+6.  Given a sample size of 60, 1000 bootstrap samples for each interval, and 50 
     confidence intervals constructed (the default values for the above app), what 
     proportion of your confidence intervals include the true population proportion? 
     Is this proportion exactly equal to the confidence level? If not, explain why. 
     Make sure to include your plot in your answer.
 
-* * *
-
 ## More Practice
 
-1.  Choose a different confidence level than 95%. Would you expect a confidence 
+7.  Choose a different confidence level than 95%. Would you expect a confidence 
     interval at this level to me wider or narrower than the confidence interval 
     you calculated at the 95% confidence level? Explain your reasoning.
 
-1.  Using code from the **infer** package and data fromt the one sample you have 
+8.  Using code from the **infer** package and data fromt the one sample you have 
     (`samp`), find a confidence interval for the proportion 
     of US Adults who think climate change is affecting their local community with a 
     confidence level of your choosing (other than 95%) and interpret it.
 
-1.  Using the app, calculate 50 confidence intervals at the confidence level you chose 
+9.  Using the app, calculate 50 confidence intervals at the confidence level you chose 
     in the previous question, and plot all intervals on one plot, and calculate 
     the proportion of intervals that include the true population proportion. 
     How does this percentage compare to the confidence level selected for the 
     intervals?
     
-1.  Lastly, try one more (different) confidence level. First, state how you expect the
+10.  Lastly, try one more (different) confidence level. First, state how you expect the
     width of this interval to compare to previous ones you calculated. Then, 
     calculate the bounds of the interval using the **infer** package and data 
     from `samp` and interpret it. Finally, use the app to generate many intervals 
     and calculate the proportion of intervals that are capture the true population 
     proportion.
 
-1.  Using the app, experiment with different sample sizes and comment on how the 
+11.  Using the app, experiment with different sample sizes and comment on how the 
     widths of intervals change as sample size changes (increases and decreases).
     
-1.  Finally, given a sample size (say, 60), how does the width of the interval change 
+12.  Finally, given a sample size (say, 60), how does the width of the interval change 
     as you increase the number of bootstrap samples. **Hint:** Does changing the 
     number of bootstap samples affect the standard error?
+    
+## Deliverables
+
+When you are finished editing your Markdown document click the "Knit" button and choose "Knit to HTML" in the top left corner of RStudio. This will run all of your code and create a formatted document of the output. If you get an error, it means something in your Markdown file isn't right, either an error in code or some error in formatting. Call me into your breakout room, and we will troubleshoot.
+
+Submit your Markdown document and knitted file to [Moodle](https://moodle.smith.edu/) as:
+
+LastName-LastName-L-04.Rmd  (add a third last name if applicable)
+
+LastName-LastName-L-04.html
+
+*Due*: Monday, September 28th (beginning of class time, Eastern time)
 
 * * *
 
-<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a> and was adapted by Sara Stoudt.
